--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
 .header {
   margin: 0;
   border: 1px solid red;
