--- a/style.css
+++ b/style.css
@@ -71,11 +71,12 @@ body {
 }
 
 .profile {
-  margin-bottom: 20px;
+  margin-bottom: 0 20px 20px 20px;
   padding-bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
@@ -85,6 +86,7 @@ body {
   line-height: 143px;
   font-weight: 500;
   letter-spacing: -1.5px;
+  outline: 2px solid orange;
   margin: 0;
   padding: 0;
 }
@@ -197,8 +199,28 @@ body {
   .section-code {
     width: 100%;
   }
+  .profile {
+    text-align: center;
+  }
+  .profile-title {
+    font-size: 60px;
+    line-height: 75px;
+    font-weight: 500;
+    letter-spacing: -0.5px;
+  }
 }
 
+@media (max-width: 430px) {
+  .profile {
+    text-align: center;
+  }
+  .profile-title {
+    font-size: 60px;
+    line-height: 75px;
+    font-weight: 500;
+    letter-spacing: -0.5px;
+  }
+}
 .section-list {
   list-style: none;
   margin: 0;
